bin_PROGRAMS = ocher
ocher_SOURCES = \
	cdkactivity.h \
	cdkcontroller.cpp \
	cdkcontroller.h \
	cdklibrary.cpp \
	cdklibrary.h \
        cdkread.cpp \
        cdkread.h \
	cdkrender.cpp \
	cdkrender.h \
	controller.cpp \
	controller.h \
	css.cpp \
	css.h \
	diriter.cpp \
	diriter.h \
	ebook.cpp \
	ebook.h \
	epub.cpp \
	epub.h \
	epublayout.cpp \
	epublayout.h \
	fdactivity.h \
	fdcontroller.cpp \
	fdcontroller.h \
	fdlibrary.cpp \
	fdlibrary.h \
	fdread.cpp \
	fdread.h \
	fdrender.cpp \
	fdrender.h \
	format.cpp \
	format.h \
	ioapi.c \
	ioapi.h \
	layout.cpp \
	layout.h \
	logger.cpp \
	syncbooks.cpp \
	syncbooks.h \
	logger.h \
	memtree.h \
	ocher.cpp \
	ocher.h \
	options.h \
	pagination.cpp \
	pagination.h \
	path.cpp \
	path.h \
	render.cpp \
	render.h \
	shelf.cpp \
	shelf.h \
	text.cpp \
	text.h \
	textlayout.cpp \
	textlayout.h \
	unzip.c \
	unzip.h \
	unzipcache.cpp \
	unzipcache.h
